test/files/neg/t7157/Test_2.scala
import Macros._

object Test extends App {
  m1_0_0()
  m1_0_0(1)
  m1_0_0(1, 2)
  m1_0_0(1, 2, 3)

  m1_1_1()
  m1_1_1(1)
  m1_1_1(1, 2)
  m1_1_1(1, 2, 3)

  m1_2_2()
  m1_2_2(1)
  m1_2_2(1, 2)
  m1_2_2(1, 2, 3)

  m1_0_inf()
  m1_0_inf(1)
  m1_0_inf(1, 2)
  m1_0_inf(1, 2, 3)

  m1_1_inf()
  m1_1_inf(1)
  m1_1_inf(1, 2)
  m1_1_inf(1, 2, 3)

  m1_2_inf()
  m1_2_inf(1)
  m1_2_inf(1, 2)
  m1_2_inf(1, 2, 3)

  m2_0_0()()
  m2_0_0()(1)
  m2_0_0()(1, 2)
  m2_0_0()(1, 2, 3)

  m2_1_1()()
  m2_1_1()(1)
  m2_1_1()(1, 2)
  m2_1_1()(1, 2, 3)

  m2_2_2()()
  m2_2_2()(1)
  m2_2_2()(1, 2)
  m2_2_2()(1, 2, 3)

  m2_0_inf()()
  m2_0_inf()(1)
  m2_0_inf()(1, 2)
  m2_0_inf()(1, 2, 3)

  m2_1_inf()()
  m2_1_inf()(1)
  m2_1_inf()(1, 2)
  m2_1_inf()(1, 2, 3)

  m2_2_inf()()
  m2_2_inf()(1)
  m2_2_inf()(1, 2)
  m2_2_inf()(1, 2, 3)
}